src/objects/Campaign_Project_Seed__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Project_Direct_Mail__c</fullName>
        <label>Campaign Project Direct Mail</label>
        <referenceTo>Campaign_Project_Direct_Mail__c</referenceTo>
        <relationshipLabel>Campaign Project Seed</relationshipLabel>
        <relationshipName>Campaign_Project_Seed</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Control_group_included__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Control group included</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Secured_List_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secured List Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seed_Category__c</fullName>
        <label>Seed Category</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Seed_Type__c</fullName>
        <label>Seed Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>UnSecured_List_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UnSecured List Request</label>
        <type>Checkbox</type>
    </fields>
    <label>Campaign Project Seed</label>
    <nameField>
        <displayFormat>DMS-{00000}</displayFormat>
        <label>Campaign Project Seed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Project Seed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>